Added javascript and css to the webpage

--- a/adoption_info.html
+++ b/adoption_info.html
@@ -13,6 +13,7 @@
                 <ul>
                     <li><a href="home.html">Home</a></li>
                     <li><a href="adoption_info.html">Adoption Info</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="registration.html">Pet Registration</a></li>
                 </ul>
             </nav>
@@ -21,7 +22,7 @@
         <!-- Main Content Section -->
         <main>
             <h2>Available Pets for Adoption</h2>
-            <table border = "1">
+            <table>
                 <caption>Pet Details</caption>
                 <thead>
                     <tr>
