--- a/registration.html
+++ b/registration.html
@@ -13,6 +13,7 @@
                 <ul>
                     <li><a href="home.html">Home</a></li>
                     <li><a href="adoption_info.html">Adoption Info</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="registration.html">Pet Registration</a></li>
                 </ul>
             </nav>
